components/single-container-app/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: single-container-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: single-container-app
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elsingle-container-app
  namespace: jduimovich
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-single-container-app
    weight: null
status: {}
